# astro-editor

./: .gitignore  .prettierignore  CLAUDE.md  CURRENT_SESSION_PROGRESS.md  DEBUGGING_SESSION_CONTINUATION.md  README.md  RENDER_CASCADE_FIX_SUMMARY.md  SESSION_HANDOFF.md  bundle-stats.html  components.json  eslint.config.js  index.html  package-lock.json  package.json  planning.md  pnpm-lock.yaml  research-alternative-text-highlighting-approaches.md  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
.claude/agents/: codemirror-6-specialist.md  macos-ui-engineer.md  react-performance-architect.md  rust-test-engineer.md  tauri-v2-expert.md  typescript-test-engineer.md
.claude/commands/: check.md
.github/workflows/: deploy-website.yml  release.yml
docs/: CONTRIBUTING.md  GEMINI_REPORT.md  README.md  RENAMING_RECOMMENDATIONS_CLAUDE.md  RENAMING_RECOMMENDATIONS_GEMINI.md  SECURITY.md  SECURITY_REVIEW.md  architecture-guide.md  editor-research-phase3.md  ia-writer-ui.md  logging.md  preferences-system.md  recovery-system.md  release-process.md  tasks-archived.md  tasks-future.md  tasks.md  temp-css-playhround.css  user-guide.md
docs/archive/: GEMINI_REPORT.md  copyedit-mode-deep-research.md  idea-custom-markdown-language-codemirror.md  initial-prd.md  initial-requirement-notes.md  preferences-examples.md  render-cascade-debugging-guide.md  scratchpad.md  tauri-react-kickstarter-guide.md
docs/developer/: apple-signing-setup.md  architecture-guide.md  color-system.md  editor-styles.md  preferences-system.md  recovery-system.md  toast-system.md  unified-title-bar.md
docs/feature-prds/: feature-prd-mdx-component-inserter.md  prd-custom-mdx-parser.md  prd-tanstack-query.md
docs/tasks-done/: 0-early-tasks-archived.md  task-0-cleanup.md  task-1-astro-editor-website-docs.md  task-1-reduce-bundle-filesize.md  task-1-renaming.md  task-1-security-review-actions.md  task-1-tanstack-query.md  task-10-software-update.md  task-11-code-reviews.md  task-2-mdx-component-inserter.md  task-3-architectural-refactoring.md  task-4-search.md  task-5-drafttoggle.md  task-5-focus-and-typewriter-mode.md  task-7-copyedit-mode.md  task-8-user-guide.md  task-9-prerelease.md
docs/tasks-todo/: task-1-apple-signing.md  task-4-search.md  (+36 more)
scripts/: prepare-release.js
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  parser.rs
src-tauri/src/commands/: clipboard.rs  diagnostics.rs  files.rs  ide.rs  mdx_components.rs  mod.rs  project.rs  watcher.rs
src-tauri/src/models/: collection.rs  file_entry.rs  mdx_component.rs  mod.rs
src-tauri/src/test_fixtures/: enhanced_config.ts
website/: README.md  index.html
(+237 files in other folders)
