[package]
name = "astro-editor"
version = "0.1.23"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "astro_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
window-vibrancy = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
notify = "6.1"
walkdir = "2"
rfd = "0.15"
regex = "1.10"
tauri-plugin-clipboard-manager = "2.3.0"
tauri-plugin-fs = "2.4.0"
tauri-plugin-dialog = "2.3.0"
tauri-plugin-shell = "2.3.0"
tauri-plugin-process = "2.3.0"
tauri-plugin-log = "2.0.0"
log = "0.4"
chrono = "0.4"
swc_common = "14"
swc_ecma_ast = "14"
swc_ecma_parser = "21"
swc_ecma_visit = "14"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.8"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[profile.release]
codegen-units = 1        # Better LLVM optimization
lto = true               # Link-time optimizations
opt-level = "s"          # Prioritize small binary size
panic = "abort"          # Disable panic handlers
strip = true             # Remove debug symbols
